--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <nav>
             <div class="nav-container">
-                <a class="nav-item" href="home.html">Home</a>
+                <a class="nav-item" href="index.html">Home</a>
                 <a class="nav-item" href="projects.html">Projects</a>
                 <a class="nav-item" href="about.html">About</a>
                 <a class="nav-item" href="contact.html">Contact</a>
