--- a/projects.html
+++ b/projects.html
@@ -235,7 +235,7 @@
         <img alt="Seat Redesign" src="theatreseat.jpg" style="width: auto; height: 40vh;">
       </div>
 
-      <p class="caption">Hundreds of solutions were drafted between all members, but we decided to create an innovative approach to theatre seating: 
+      <p class="caption">Hundreds of solutions were drafted between all members, but we decided on an innovative approach to theatre seating: 
         making the seats completely foldable so that they could easily allow wheelchair users to sit in any section of their choosing.</p>
       </div>
 
