--- a/projects.html
+++ b/projects.html
@@ -131,7 +131,7 @@
         <source src="appledropdemo.mp4" type="video/mp4">
       </video> 
       
-      <p class="caption">A demo shows some of the various game features.</p>
+      <p class="caption">A demo showing some of the various game features.</p>
       </div>
 
        <div class="content">
