--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
        <!-- A paragraph -->
         <div class="content">
             <br>
-            <p>Hello, here's my website!&nbsp;I hope you enjoy getting to know a little more about me.&nbsp;Here's a picture of me so you can 
+            <p>Welcome to my website!&nbsp;I hope you enjoy getting to know a little more about me.&nbsp;Here's a picture of me so you can 
             get an idea of who's behind the screen.</p>
             <img alt="Me" style="width: auto; height: 30vh;" src="Headshot.jpeg">
             <p class="caption">My most professional-looking photo.</p>
