--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
        <!-- Title of webpage in the browser -->
        <title>Contact</title>
        <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
-       <link rel="icon" href="Headshot.ico" type="image/x-icon">
+       <link rel="icon" href="jvfavicon.ico" type="image/x-icon">
        <!--You can add style elements here-->
        <link rel="stylesheet" href="styles.css">
     </head>
