--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
        <!-- A paragraph -->
        <div class="content">
        <br>
-       <p>First of all, this entire website is a project!&nbsp;Although they aren't actual coding languages, I learned HTML and some 
+       <p>First of all, this entire website is a project!&nbsp;I learned HTML and some 
         CSS to create an entirely customizable website from scratch.&nbsp;No website templates were used. Even the logo was drawn by hand!</p>
 
         <p>I'm now a third-year student at the University of Toronto, and I've done various projects throughout my time here.&nbsp;
