--- a/about.html
+++ b/about.html
@@ -33,9 +33,13 @@
         <div class="content">
             <br>
             <p>So, who am I? Great question!</p>
-            <p>My name is Jessica Varriale.&nbsp;I am a third-year Electrical Engineering student at the University of Toronto. I was always
-                drawn to engineering; even as a young girl, I loved fashioning trinkets out of various household items like cardboard and tape, 
-                which I dubbed my &quot;inventions&quot;.&nbsp;Somehow, none of these ideas made it to step 8 of the inventors' checklist.                
+            <p>"My name is Jessica, and I am a third-year Electrical Engineering student at the University of Toronto. I'm passionate about many 
+              areas of ECE, with particular interest in digital electronics, including digital systems, low-level hardware, and ASIC design.&nbsp;
+              I also enjoy working on circuit and PCB design."
+              <br>
+              Why am I in engineering in the first place?&nbsp;I was always drawn to it from a young age.&nbsp;I loved fashioning trinkets out of 
+              various household items like cardboard and tape, which I dubbed my &quot;inventions&quot;.&nbsp;
+              Somehow, none of these ideas made it to step 8 of the inventors' checklist.                
             <br> <br>
 
             <div style="display: flex; align-items: stretch; gap: 2px;">
