--- a/about.html
+++ b/about.html
@@ -33,12 +33,16 @@
         <div class="content">
             <br>
             <p>So, who am I? Great question!</p>
-            <p>"My name is Jessica, and I am a third-year Electrical Engineering student at the University of Toronto. I'm passionate about many 
+            <p>My name is Jessica, and I am a third-year Electrical Engineering student at the University of Toronto. I'm passionate about many 
               areas of ECE, with particular interest in digital electronics, including digital systems, low-level hardware, and ASIC design.&nbsp;
-              I also enjoy working on circuit and PCB design."
+              I also enjoy working on circuit and PCB design.
               <br>
-              Why am I in engineering in the first place?&nbsp;I was always drawn to it from a young age.&nbsp;I loved fashioning trinkets out of 
-              various household items like cardboard and tape, which I dubbed my &quot;inventions&quot;.&nbsp;
+              Right now, I've been keeping busy as a student who balances her time as a student with being a Powersystems member 
+              of the University of Toronto's Wind Turbine (UTWind) Student Design Team.&nbsp;I've been working on circuit design to maximize power 
+              efficiency for a sustainable wind turbine.&nbsp;I'm also currently working as a private first-year Physics tutor.
+              <br>
+              But here's more about me past the résumé details: why am I in engineering in the first place?&nbsp;I was always drawn to it from a young age.
+              &nbsp;I loved fashioning trinkets out of various household items like cardboard and tape, which I dubbed my &quot;inventions&quot;.&nbsp;
               Somehow, none of these ideas made it to step 8 of the inventors' checklist.                
             <br> <br>
 
