--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
               of the University of Toronto's Wind Turbine (UTWind) Student Design Team.&nbsp;I've been working on circuit design to maximize power 
               efficiency for a sustainable wind turbine.&nbsp;I'm also currently working as a private first-year Physics tutor.
               <br>
-              But here's more about me past the résumé details: why am I in engineering in the first place?&nbsp;I was always drawn to it from a young age.
+              But here's more about me past the resume details: why am I in engineering in the first place?&nbsp;I was always drawn to it from a young age.
               &nbsp;I loved fashioning trinkets out of various household items like cardboard and tape, which I dubbed my &quot;inventions&quot;.&nbsp;
               Somehow, none of these ideas made it to step 8 of the inventors' checklist.                
             <br> <br>
