--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             <br>
             <p>So, who am I? Great question!</p>
             <p>My name is Jessica, and I am a third-year Electrical Engineering student at the University of Toronto. I'm passionate about many 
-              areas of ECE, with particular interest in digital electronics, including digital systems, low-level hardware, and ASIC design.&nbsp;
+              areas of ECE, with a particular interest in digital electronics, including digital systems, low-level hardware, and ASIC design.&nbsp;
               I also enjoy working on circuit and PCB design.
               <br>
               Right now, I've been keeping busy as a student who balances her time as a student with being a Powersystems member 
